fix(launch_bar): calendar month selector clipped

--- a/apps/client/src/widgets/launch_bar/CalendarWidget.css
+++ b/apps/client/src/widgets/launch_bar/CalendarWidget.css
@@ -10,7 +10,6 @@
 
 .calendar-dropdown-widget {
     margin: 0 auto;
-    overflow: hidden;
     width: 100%;
 }
 
